# pre-commit-hooks

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
pre_commit_hooks/: pretty_format_toml.py  validate_toml_schema.py
